fixed bug where z index too high causing the credits to be triggered above everything else

--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ h1 {
   background: red;
   border: none;
   border-radius: 25px;
-  z-index: 1000;
 }
 
 #creditsContainer {
